--- a/package.json
+++ b/package.json
@@ -24,13 +24,12 @@
     "lucide-react": "^0.429.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
-    "next": "14.2.6",
+    "next": "^15.0.2-canary.8",
     "nodemailer": "^6.9.14",
     "openai": "^4.56.0",
     "pino": "^9.4.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-wordcloud": "^1.2.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
